--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
 <body>
     <div class="container">
         <div id="grid">
-            <div class="grid-row">
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
+            <div class="grid-row" data-row="0">
+                <div class="grid-item" data-col="0"></div>
+                <div class="grid-item" data-col="1"></div>
+                <div class="grid-item" data-col="2"></div>
             </div>
-            <div class="grid-row">
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
+            <div class="grid-row" data-row="1">
+                <div class="grid-item" data-col="0"></div>
+                <div class="grid-item" data-col="1"></div>
+                <div class="grid-item" data-col="2"></div>
             </div>
-            <div class="grid-row">
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
+            <div class="grid-row" data-row="2">
+                <div class="grid-item" data-col="0"></div>
+                <div class="grid-item" data-col="1"></div>
+                <div class="grid-item" data-col="2"></div>
             </div>
         </div>
+        <button id="reset">Restart</button>
     </div>
     <script src="script.js"></script>
 </body>
