--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>Tic-Tac-Toe</h1>
         <div id="grid">
             <div class="grid-row" data-row="0">
                 <div class="grid-item" data-col="0"></div>
@@ -26,7 +27,7 @@
                 <div class="grid-item" data-col="2"></div>
             </div>
         </div>
-        <button id="reset">Restart</button>
+        <button id="restart">Restart</button>
     </div>
     <script src="script.js"></script>
 </body>
