--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <div class="grid-item" data-col="2"></div>
             </div>
         </div>
+        <footer class="footer">
+            Copyright &#169 <span id="date"></span>
+        </footer>
     </div>
     <div class="overlay"></div>
     <div class="modal">This is my modal</div>
