--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
         <footer class="footer">
-            Copyright &#169 <span id="date"></span>
+            Copyright Joel Kizito &#169 <span id="date"></span>
         </footer>
     </div>
     <div class="overlay"></div>
